# fkc_coreset_cpp

./: README.md  run.sh
fkc_coreset/: refactor_pl.py
fkc_coreset/src/: CMakeLists.txt  main_algo.cpp
