cmake_minimum_required(VERSION 3.18.2)
project(fkc_coreset)
set( CMAKE_CXX_STANDARD 17 )
set(CMAKE_VERBOSE_MAKEFILE ON)
find_package(OpenMP REQUIRED)
find_package(libpqxx REQUIRED)
add_executable(fkc_coreset main_algo.cpp)
target_link_libraries(fkc_coreset PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(fkc_coreset PRIVATE pqxx)
